# draft-cli

./: Cargo.toml
my_project/: package-lock.json  package.json
src/: main.rs
src/actions/: mod.rs
src/actions/api/: create_project.rs  frameworks.rs  mod.rs
src/actions/blank/: mod.rs
src/actions/new/: mod.rs
src/commands/: api.rs  dotfiles.rs  gm.rs  mod.rs  new.rs
src/templates/: mod.rs
src/templates/blank/: blank.tpl
src/templates/express/: express.tpl
src/templates/tpls/: express-cors.tpl  fastify.tpl
src/utils/: categories.rs  command.rs  create_project.rs  dependencies.rs  dependency.rs  manager.rs  mod.rs  node.rs  package_manager.rs  project.rs  suport.rs  typescript.rs
