[package]
name = "draft-cli"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
dialoguer = "0.10.4"
package-json = "0.4.0"
rust-embed = { version = "8.2.0", features = ["include-exclude"]} 
